# rust-gbc

./: .gitignore  Cargo.toml  Trunk.toml  application.html  build.rs  build.sh  clean_trace.mjs  debugger.html  display.ts  fetch_test_data.sh  index.html  index.ts  nixpacks.toml  opcodes.html  package-lock.json  package.json  readme.md  roms.json  shell.nix  style.css  style.scss  test_results.md  tsconfig.json  util.ts  vite.config.js
.cargo/: config
assets/scripts/: audio_context.js  collapsable.js  controller_input.js  hover.js  logs.js  menu.js  rom_loader.js  speed_selector.js
assets/style/: collapsible.css  logs.css
debugger/: .gitignore  Cargo.toml  index.html  style.scss
debugger/src/: debugger.rs  lib.rs  memory_map.rs
debugger/src/components/: audio_visualizer.rs  breakpoint_manager.rs  breakpoint_selector.rs  cpu_info.rs  disassembler.rs  joypad.rs  linear_memory_view.rs  logs.rs  macro_helpers.rs  memory_image.rs  memory_view.rs  mod.rs  ppu_info.rs  rom_loader.rs  run_controller.rs  screen.rs  system_info.rs  timeline.rs  util.rs  validated_input.rs  vram_view.rs
debugger/src/components/timeline/: checkpoint_manager.rs  t_states.rs
docs/: gbc-emu_bg.wasm  index.html
docs/roms/games/: Bishoujo Senshi Sailor Moon (J).gb
gameboy/: .gitignore  Cargo.toml  cgb.rs  controller.rs  cpu.rs  dma_controller.rs  fetch_test_data.sh  io_registers.rs  lib.rs  memory_mapper.rs  ppu.rs  renderer.rs  save_state.rs  state.rs  timer.rs  work_ram.rs
gameboy/cartridge/: cartridge_data.rs  mbc5.rs  memory_bank_controller.rs
gameboy/cpu/: flags.rs  gb_stack.rs  instruction.rs  registers.rs  state.rs
gameboy/cpu/instruction/: condition.rs  decode_tables.rs  execute.rs  fetch.rs
gameboy/ppu/: color_ram.rs  mod.rs  renderer.rs  renderer_old.rs  sprite.rs  tile_data.rs
gameboy/renderer/: sprite.rs
gameboy/src/: apu.rs  audio.rs  cartridge.rs  cgb.rs  controller.rs  cpu.rs  debugger.rs  dma_controller.rs  flags.rs  io_registers.rs  joypad.rs  lcd.rs  lib.rs  memory_mapper.rs  oam_dma.rs  ppu.rs  save_state.rs  state.rs  timer.rs  work_ram.rs
gameboy/src/apu/: channel.rs  frame_sequencer.rs  length_counter.rs  lfsr.rs  noise.rs  square.rs  sweep.rs  timer.rs  volume_envelope.rs  wave.rs
gameboy/src/apu/channel/: noise.rs  square.rs  wave.rs
gameboy/src/cartridge/: cartridge_data.rs  header.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  memory_bank_controller.rs
gameboy/src/cpu/: condition.rs  cpu_stack.rs  flags.rs  gb_stack.rs  instruction.rs  state.rs  values.rs
gameboy/src/cpu/instruction/: execute.rs  fetch.rs  opcode.rs
gameboy/src/examples/: bench.rs
gameboy/src/ppu/: color_ram.rs  dmg_palette.rs  lcdc.rs  renderer.rs  sprite.rs  stat.rs  tile_data.rs
gameboy/src/test/: age.rs  blarggs.rs  boot.rs  gambatte.rs  instr_timing.rs  microtest.rs  mod.rs  mooneye.rs  same_suite.rs
gameboy/src/test/gambatte/: char_mapping.rs  mod.rs
gameboy/src/test/integration/: blarggs.rs  mooneye.rs
gameboy/src/test/integration/mooneye/: instruction_timing.rs  memory_bank_controllers.rs  ppu.rs
gameboy/src/test/opcode_tests/: cpu.rs  memory_mapper.rs  mod.rs  state.rs
gameboy/src/test/opcode_tests/v1/: cb d4.json  d4.json
gameboy/src/test/util/: instruction_timing.rs  mod.rs  mooneye_test.rs  rom_loader.rs  screenshot_test.rs  success_code.rs
gameboy/src/util/: bits.rs  mod.rs  serde_big_array.rs
gameboy/test/: boot.rs  mod.rs
gameboy/test/integration/mooneye/: timer.rs
gameboy/test/util/: mod.rs  mooneye_test.rs  rom_loader.rs  screenshot_test.rs
gameboy/timer/: state.rs
gameboy/util/: bits.rs  serde_big_array.rs
roms/: Cargo.toml  build.rs
roms/games/: Donkey Kong Country (UE) (M5) [C][!].sav  Pocket Bomberman (U) [S].gb  Pokemon - Gold Version.rtc  Pokemon - Gold Version.sav  Super Breakout (USA).gb
roms/other/: bully.gb
roms/roms/games/: Bomberman GB 2.gb  Donkey Kong.gb
roms/roms/test/: bully.gb
roms/src/: lib.rs
sm83/: .gitignore  Cargo.toml
sm83/src/: bits.rs  cpu.rs  instruction.rs  lib.rs  memory_mapper.rs  registers.rs  stack.rs  state.rs  values.rs
sm83/src/cpu/: condition.rs  flags.rs  interrupt.rs
sm83/src/instruction/: decode_tables.rs  execute.rs  fetch.rs  fetcher.rs  mac_instruction.rs  opcode.rs
src/: app.rs  cartrage.rs  cartridge.rs  components.rs  cpu.rs  emulator.rs  flags.rs  lcd.rs  lib.rs  logger.rs  main.rs  memory.rs  ppu.rs  test.rs  util.rs
src/app/: components.rs  controller.rs  drawable.rs  file_selector.rs  logger.rs  managed_input.rs  save_manager.rs  style.rs  web_save_manager.rs
src/app/components/: buffer_view.rs  debugger.rs  joypad_view.rs  log_view.rs  logger.rs  opcode_table.rs  status_view.rs
src/application/: input.rs  logger.rs  mod.rs  screen.rs  setup_listeners.rs  uploader.rs  web_save_manager.rs
src/application/util/: events.rs
src/cartridge/: header.rs
src/components/: buffer_view.rs  drawable.rs  joypad_view.rs  log_view.rs  logger.rs  memory_view.rs  ppu_view.rs  register_view.rs  screen_view.rs  state_view.rs  tile_view.rs
src/cpu/: cpu.rs  decode_tables.rs  flags.rs  gbStack.rs  gb_stack.rs  instruction.rs  registers.rs  values.rs
src/cpu/instruction/: decode_tables.rs  execute.rs  fetch.rs  mac_instruction.rs  opcode.rs
src/emulator/: cartridge.rs  controller.rs  cpu.rs  flags.rs  io_registers.rs  lcd.rs  memory.rs  memory_mapper.rs  memory_registers.rs  ppu.rs  renderer.rs  save_state.rs  state.rs  timer.rs  timer_controller.rs
src/emulator/cartridge/: cartridge_data.rs  header.rs  mbc.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  memory_bank_controller.rs
src/emulator/cpu/: flags.rs  gb_stack.rs  instruction.rs  (+3 more)
src/ppu/: flags.rs  interrupts.rs  ppu.md  registers.rs
src/test/: boot.rs  instruction.rs  integration.rs  logger.rs  mocks.rs  mod.rs  test_framework.rs
src/util/: bit_ops.rs  bitmap.rs  bits.rs  color.rs  debug_draw.rs  file_types.rs
tui/: Cargo.toml
tui/climg/: Cargo.toml
tui/src/: main.rs
util/: bin_size.mjs
web/: Cargo.toml  index.html  style.scss
web/assets/scripts/: audio_context.js  main_app.js  menu.js  speed_selector.js
(+85 files in other folders)
