[package]
name = "gbc-emu"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3

[build-dependencies]
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"

[workspace]
members = ["gameboy", "sm83", "debugger"]

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
debug = true


[dependencies]
gameboy = { path = "gameboy" }
log = "0.4.17"
serde = { version = "1.0.150", features = ["derive"] }
gloo = "0.8.0"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.64", features = [
    "Navigator",
    "Gamepad",
    "GamepadButton",
    "Document",
    "HtmlElement",
    "Node",
    "Event",
    "Storage",
    "ImageData",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "DragEvent",
    "DataTransfer",
    "Performance",
    # For realtime audio playback
    "AudioContext",
    "AudioContextOptions",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "ScriptProcessorNode",
    "AudioProcessingEvent",
    "ConstantSourceNode",
] }
serde_json = "1.0.89"
wasm-bindgen = "0.2.87"
lazy_static = "1.4.0"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
js-sys = "0.3.67"
