[package]
name = "gbc-emu"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3

[workspace]
members = ["gameboy", "sm83", "debugger", "tui", "web", "roms"]

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
debug = true


[dependencies]
gameboy = { path = "gameboy" }
log = "0.4.17"
serde = { version = "1.0.150", features = ["derive"] }
lazy_static = "1.4.0"
