[package]
name = "gb-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22", default-features = false, features = ["glow"] }
egui_extras = "0.22.0"
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.152", features = ["derive"] }
gameboy = { path = "../gameboy" }
sm83 = { path = "../sm83" }
ehttp = "0.2.0"
hex_fmt = "0.3.0"

[dependencies.poll-promise]
version = "0.2.0"
features = ["wasm-bindgen", "web"]


[profile.release]
lto = true
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
