[package]
name = "gb-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = ["glow"] }
egui_extras = "0.28.1"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.42"
serde = { version = "1.0.204", features = ["derive"] }
gameboy = { path = "../gameboy" }
sm83 = { path = "../sm83" }
ehttp = "0.5.0"
hex_fmt = "0.3.0"
serde_json = "1.0.120"
lazy_static = "1.5.0"
wasm-logger = "0.2.0"


[profile.release]
lto = true
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
