[package]
name = "gameboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
enum-primitive-derive = "0.2.2"
num-traits = "0.2.15"
instant = { version = "0.1", features = ["wasm-bindgen"] }
lazy_static = "1.4.0"
chrono = { version = "0.4.23", features = ["serde"] }

[dev-dependencies]
image = { version = "0.24.5", default-features = false, features = ["png"] }

[lib]
name = "gameboy"
path = "src/lib.rs"

[profile.dev]
opt-level = 3
