[package]
name = "gameboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
lazy_static = "1.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
bitflags = "1.3.2"
log = "0.4.17"
[dev-dependencies]
image = { version = "0.24.5", default-features = false, features = ["png"] }
test-generator = { git = "https://github.com/JamesGuthrie/test-generator.git" }

[lib]
name = "gameboy"
path = "src/lib.rs"

[profile.dev]
opt-level = 3
