[package]
name = "gameboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
lazy_static = "1.5.0"
bitflags = { version = "2.6.0", features = ["serde"] }
log = "0.4.22"
sm83 = { path = "../sm83" }


[dev-dependencies]
image = { version = "0.25.1", default-features = false, features = ["png"] }
test-generator = { git = "https://github.com/unfinishedprogram/test-generator.git", branch = "master" }

[lib]
name = "gameboy"
path = "src/lib.rs"

[profile.dev]
opt-level = 3
